change in skills

--- a/views/skill.ejs
+++ b/views/skill.ejs
@@ -25,7 +25,7 @@
                             </div>
                         </div>
                         <div class="col-sm-5">
-                            <h3 class="mt-5">Java Programming</h3>
+                            <h3 class="mt-5">React JS</h3>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
                                     style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%
@@ -33,7 +33,7 @@
                             </div>
                         </div>
                         <div class="col-sm-5 offset-sm-2">
-                            <h3 class="mt-5">Python</h3>
+                            <h3 class="mt-5">Node JS</h3>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
                                     style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">95%
@@ -41,7 +41,7 @@
                             </div>
                         </div>
                         <div class="col-sm-5">
-                            <h3 class="mt-5">SQL</h3>
+                            <h3 class="mt-5">MongoDB</h3>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
                                     style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">95%
